[package]
name = "mtls-rust-server"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
axum-server = { version = "0.6", features = ["tls-rustls"] }
rustls = "0.22"
rustls-pemfile = "2.0"
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
